stretched-link-bug-fixed

--- a/app/assets/stylesheets/product-card.scss
+++ b/app/assets/stylesheets/product-card.scss
@@ -12,6 +12,7 @@
     margin-bottom: 8;
     isolation: 2;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+    position: relative;
 }
 
 .product-text {
@@ -20,6 +21,7 @@
     color: black;
     font-style: bold;
     font-weight: 700;
+    display: inline-block;  
 }
 
 .product-text:hover{
